fixed up artie on mobile

--- a/style.css
+++ b/style.css
@@ -112,6 +112,12 @@ body {
   padding-right: 10px;
 }
 
+.email::before {
+  content: "\2709";
+  font-size: 20px;
+  padding-right: 4px;
+}
+
 .grid {
   display: grid;
   grid-template-columns: 1fr 3fr;
@@ -163,7 +169,7 @@ body {
 
 .sub-head {
   font-family: var(--serif);
-  font-size: 1.6vw;
+  font-size: 1.2vw;
   line-height: 1.4;
   font-weight: 200;
   font-style: italic;
@@ -376,8 +382,10 @@ a:focus,
 }
 
 .artie img {
+  position: relative;
+  margin: 0 auto;
   display: none;
-  width: 11em;
+  max-width: 11em;
 }
 
 .artie:hover img,
@@ -386,6 +394,7 @@ a:focus,
   position: absolute;
   top: 50%;
   left: 50%;
+  margin: 5 auto;
 }
 
 @media (max-width: 900px) {
@@ -413,6 +422,14 @@ a:focus,
 
 .illo {
   width: 50%;
+}
+
+.artie:hover img,
+.artie:focus img {
+  position: absolute;
+  top: 1200px;
+  right: 0;
+  margin: 0 auto;
 }
 
 .sub-head {
